--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Personify Personal/VCard Website Template</title>
+    <title>Blog do </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -44,13 +44,33 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
       </div>
       
-      <aside style="background-image: url(img/profile_big.jpg);"></aside>
+      <aside style="background-image: url(/home/alunos/blog/imagem/a8375ba6d731fbd91d0406542e6314c9--santos.jpg);"></aside>
       <main>
-        <h1 class="mb-0">Hi, I'm Kate Woodman</h1>
+        <h1 class="mb-0">Ola, Eu sou Raul Seixas.</h1>
         <div class="mb-5">
         <p class="lead mb-3">Web Designer &amp; Developer</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, magnam aut animi, excepturi voluptatum placeat dolor accusantium atque iure! Animi architecto eveniet voluptatum illo ut maiores sed, autem pariatur culpa?</p>
-        <p>Commodi, neque debitis atque cum quod, culpa repellendus voluptatum voluptatem, molestiae dicta laborum nulla corporis illum, ratione rerum quibusdam ea optio! Consectetur obcaecati facilis esse reprehenderit ipsam, facere dolorem incidunt.</p>
+        <p>Maluco beleza(letra da musica)
+          Enquanto você se esforça pra ser
+Um sujeito normal e fazer tudo igual
+Eu do meu lado aprendendo a ser louco
+Um maluco total, na loucura geral
+Controlando a minha maluquez
+Misturada com minha lucidez
+Vou ficar, ah! Ficar com certeza, maluco beleza
+Eu vou ficar, ah! Ficar com certeza, maluco beleza
+E esse caminho que eu mesmo escolhi
+É tão fácil seguir
+Por não ter onde ir
+Controlando a minha maluquez
+Misturada com a minha lucidez, êh
+Controlando a minha maluquez
+Misturada com a minha lucidez
+Vou ficar, ficar com certeza, maluco beleza
+Eu vou ficar, ah! Ficar com certeza, maluco beleza
+Eu vou ficar, ah! Ficar com certeza, maluco beleza eh
+Eu vou ficar, ah! Ficar com certeza, maluco beleza</p>
+        <p>Compositores: Claudio Roberto Andrade De Azeredo / Raul Seixas / Raul Santos Seixas
+Letra de Maluco beleza © Warner/Chappell Music, Inc, Som Livre</p>
         </div>
 
         <p>
