commit na minha maquina

--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
       
       <aside style="background-image: url(/home/alunos/blog/imagem/a8375ba6d731fbd91d0406542e6314c9--santos.jpg);"></aside>
       <main>
-        <h1 class="mb-0">Ola, Eu sou Raul Seixas.</h1>
+        <h1 class="mb-0">Sanyo wild. IFPI noite </h1>
+        <h1 class="mb-0">Raul Seixas.</h1>
         <div class="mb-5">
         <p class="lead mb-3">Web Designer &amp; Developer</p>
-        <p>Maluco beleza(letra da musica)
-          Enquanto você se esforça pra ser
+        <p>Maluco beleza(letra da musica)</p>
+        <p>  Enquanto você se esforça pra ser
 Um sujeito normal e fazer tudo igual
 Eu do meu lado aprendendo a ser louco
 Um maluco total, na loucura geral
