--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
       <aside style="background-image: url(/home/alunos/blog/imagem/a8375ba6d731fbd91d0406542e6314c9--santos.jpg);"></aside>
       <main>
         <h1 class="mb-0">Sanyo wild. IFPI noite </h1>
+        <h1>INFORMATICA</h1>
         <h1 class="mb-0">Raul Seixas.</h1>
         <div class="mb-5">
         <p class="lead mb-3">Web Designer &amp; Developer</p>
